Fix quotebuilder overflow.

--- a/gap/static/local/less/main.less
+++ b/gap/static/local/less/main.less
@@ -283,10 +283,10 @@ div[class*="sidebar-"] .panel-heading:before {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  max-width: 300px;
+  max-width: 200px;
 
   @media (min-width: @screen-sm-min) {
-    max-width: 250px;
+    max-width: 200px;
   }
 
   @media (min-width: @screen-md-min) {
